feat: Update ResultTest.java to use Arrays.asList() for consistency feat: Add .gitignore to exclude IDE and build files